# SVG

./: .gitignore  .gitmodules  ARCHITECTURE.md  DiffuSVG_Changes.md  DiffuSVG_Colab.ipynb  DiffuSVG_Colab_v2.ipynb  DiffuSVG_Complete.ipynb  DiffuSVG_Dataset_Colab.ipynb  DiffuSVG_Dataset_Finetune.ipynb  DiffuSVG_Dataset_Finetune.py  DiffuSVG_Experiments.ipynb  DiffuSVG_Generate_CPU.py  DiffuSVG_Infer.ipynb  DiffuSVG_Inference_v6.py  DiffuSVG_Kaggle.py  DiffuSVG_LoRA_Direct.py  DiffuSVG_Pipeline_v2.py  DiffuSVG_Pipeline_v3.py  DiffuSVG_Pipeline_v4.py  DiffuSVG_Pipeline_v5.py  DiffuSVG_Pipeline_v6.py  DiffuSVG_Pipeline_v7.py  DiffuSVG_Project_Report.md  DiffuSVG_SVG_T2I_H200.py  DiffuSVG_SVG_T2I_v8.py  DiffuSVG_Test.py  DiffuSVG_v4.ipynb  DiffuSVG_v7_Colab.ipynb  OmniSVG_Colab.ipynb  OmniSVG_Inference.py  OmniSVG_Interactive.py  OmniSVG_Kaggle.py  OmniSVG_TextToSVG.py  Pipe.docx  README.md  README_SVGPATCHLAB.md  SVG_Patch_Lab_Architecture.docx  baselines.py  check_svg_model_overfitting.py  dataset_pipeline.py  (+35 more)
DiffusionSVG/: 00_filter_prompts.py  01_generate_pngs.py  02_vectorize_svgs.py  03_build_dataset.py  04_grpo_train.py  requirements.txt  rewards.py
IntroSVG/: 00_create_sft_data.py  00_download_official_data.py  01_standardize_data.py  02_build_sft_data.py  03_sft_train.py  04_build_dpo_data.py  05_dpo_train.py  IntroSVG — Single-file Kaggle Runner.py  deepspeed_zero3.json  ds_z3_config.json  inference_loop.py  requirements_training.txt  svg_utils.py  train_sft.sh
OmniSVG/: README.md  T4_RUN.md  config.yaml  decoder.py  generate_svg.py  inference.py  server.py  (+3 more)
(+157 files in other folders)
